fix issue #17 - duplicate header count more than 2 causes exception (#18)
* Fix a bug if multiple headers have the same name

* make slightly more efficient to avoid array allocation (most likely). change instanceof cases to use pattern matching for consistency

---------

Co-authored-by: Pierre Viret <pierre.viret@postfinance.ch>
Co-authored-by: robert engels <robaho@users.noreply.github.com>